# gated-attn

./: .coverage  Makefile  README.md  pyproject.toml
gated_attention/dataset/: dataset_utils.py  toy_datasets.py
gated_attention/experiments/: analysis_utils.py  config.yaml  create_gated_attention_model.py  create_skip_trigram_model.py  loading_gated_attention_model.py
gated_attention/experiments/saved_models/: gated_block_4H_3ST.st  gated_block_6H_4ST.st  gated_block_8H_5ST.st  toy_model_2H_3ST.st  toy_model_3H_4ST.st  toy_model_4H_5ST.st  toy_model_4H_5ST_MANUAL.st
gated_attention/modelling/: modified_attention.py  traditional_transformer.py
gated_attention/modelling/transformer_components/: attention.py  config.py  embed_unembed.py
gated_attention/train/: train_gated_attention.py  train_traditional.py
tests/: conftest.py  test_analysis.py  test_dataset.py  test_dataset_utils.py  test_end_to_end.py  test_training.py  test_transformer_components.py
tests/test_models/: gated_block_8H_5ST.st  toy_model_2H_3ST_MANUAL.st  toy_model_conventional_4H_5ST.st
